# SupaCodex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.pt-BR.md  index.html  package.json
docs/: homebrew-distribution.md
landing-page/: i18n.js  index.html  style.css
native/: Cargo.toml
native/helper/: build-helpers.sh  com.supacodex.app.helper.keepawake.plist
native/src/: codex_profiles.rs  lib.rs  locale.rs  main.rs  models.rs  native_app.rs  process_utils.rs  runtime_env.rs
native/src/config/: app_config.rs
native/src/db/: messages.rs  mod.rs  repos.rs  threads.rs
native/src/engines/: codex.rs  codex_event_mapper.rs  mod.rs
native/src/git/: multi_repo.rs
native/src/power/: macos_helper.rs  mod.rs
scripts/: build-desktop.mjs  build-tauri-linux.mjs  generate-homebrew-cask.mjs  generate-update-manifest.mjs  install-linux-local.mjs  tauri-dev-vite.mjs  vite-orphan-guard.cjs
scripts/perl5/: FindBin.pm
scripts/templates/: homebrew-cask.rb.tpl
src/: App.tsx  globals.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/helper/: build-helpers.sh  keepawake-helper.swift  keepawake-registrar.swift
src-tauri/icons/: icon.icns
src-tauri/sidecar/: claude-agent-sdk-server.mjs
src-tauri/src/: codex_profiles.rs  lib.rs  linux_appimage.rs  linux_webkit.rs  runtime_env.rs  terminal_notifications.rs  workspace_startup.rs
src/lib/: chatComposerClipboard.test.ts  chatComposerClipboard.ts  ipc.ts  nativeEditActions.test.ts  nativeEditActions.ts  (+10 more)
tests/: homebrewCask.test.ts  markdownParserCore.test.ts  updateManifest.test.ts
(+93 files in other folders)
