[package]
name = "supacodex"
version = "0.46.1"
edition = "2021"
authors = ["SupaCodex contributors"]
license = "MIT"

[lib]
name = "supacodex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]

[dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["gtk_v4_20", "v1_8"] }
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_20"] }

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
toml = "0.8"
libc = "0.2"

rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
which = "6"

git2 = "0.19"
gdk-pixbuf = "0.22"
notify = "6"
portable-pty = "0.8"
sys-locale = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[profile.dev]
# Keep local debug builds inspectable without letting `target/` explode as quickly.
debug = 1
